<resources>
    <string name="app_name">FinalProject_android</string>
    <string name="underlined_text"><u>Resend in:</u></string>
    <string name="next_button_description">Next</string>
    <string name="previous_button_description">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="bio">Bio</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="we_will_send_you_a_code_to_set_or_reset_your_password">We will send you a code to set or reset your password</string>
    <string name="submit">Submit</string>
    <string name="here">Here</string>
    <string name="trips_without_troubles">Trips Without Troubles</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_continue_with">OR Continue With</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="please_enter_a_new_password">Please enter a new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit_1">Submit</string>
    <string name="type_a_keyword">Type a keyword</string>
    <string name="settings">SETTINGS</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile_settings">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="sercurity">Sercurity</string>
    <string name="help_and_support">Help and Support</string>
    <string name="questions_and_answers">Questions and Answers</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="more">More</string>
    <string name="language">Language</string>
    <string name="change_account">Change account</string>
    <string name="setup_information">Setup Information</string>
    <string name="nickname">Nickname</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="address_infor">Address</string>
    <string name="enter_your_address_1">Enter your address</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="sex">Sex</string>
    <string name="submit_2">Submit</string>
    <string name="sign_in_1">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in_2">Sign In</string>
    <string name="forgot_password_1">Forgot Password?</string>
    <string name="sign_up_1">SIGN UP</string>
    <string name="username_1">Username</string>
    <string name="password_1">Password</string>
    <string name="confirm_password_1">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_up_2">Sign Up</string>
    <string name="verifitation">VERIFITATION</string>
    <string name="resend">Resend</string>
    <string name="home_1">Home</string>
    <string name="kilometres">Kilometres</string>
    <string name="potholes_1">Potholes</string>
    <string name="hours">Hours</string>
    <string name="pothole_state_this_month">Pothole State this month</string>
    <string name="this_week">This Week</string>
    <string name="pothole_types">Pothole Types</string>
    <string name="history">History</string>
    <string name="search_for_a_place">Search for a place</string>
    <string name="member_since">Member since</string>
    <string name="bronze_member">Bronze member</string>
    <string name="birthday_1">Birthday</string>
    <string name="address_1">Address</string>
    <string name="email_1">Email</string>
    <string name="more_actions">More Actions</string>
    <string name="settings_1">Settings</string>
    <string name="log_out">Log out</string>
    <string name="coordinates">Coordinates:</string>
    <string name="type">Type:</string>
    <string name="uploaded">Uploaded:</string>
    <string name="driving">Driving</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="potholes_2">Potholes</string>
    <string name="start">Start</string>
    <string name="driving_pothole_warning">DRIVING POTHOLE WARNING</string>
    <string name="type_1">Type:</string>
    <string name="ahead">Ahead:</string>
    <string name="remaining_distance">Remaining Distance:</string>
    <string name="keep_caution">Keep caution!</string>
    <string name="have_you_just_found_a_pothole">Have you just found a pothole ?</string>
    <string name="type_2">Type:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="pothole_information">Pothole Information</string>
    <string name="author">Author:</string>
    <string name="location">Location:</string>
    <string name="type_3">Type:</string>
    <string name="district_province">District, Province</string>
    <string name="coordinates_1">coordinates</string>
    <string name="you_have_completed_your_registration">You have completed your registration!</string>
    <string name="congratulation">CONGRATULATION!</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="dashboard">Dashboard</string>
    <string name="map">Map</string>
    <string name="history_1">History</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string-array name="pothole_confirm">
        <item>Caution</item>
        <item>Warning</item>
        <item>Danger</item>
    </string-array>
    <string-array name="sex_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="language_options">
        <item>English</item>
        <item>Korean</item>
    </string-array>
</resources>