<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    app:cardCornerRadius="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congratulation"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:textAppearance="@style/title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_have_completed_your_registration"
            android:textColor="@color/text_primary"
            android:textSize="15sp"
            android:textAppearance="@style/title"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/congratulation"/>
        <Button
            android:id="@+id/si_congra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_now"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/title"
            android:layout_margin="15dp"
            android:background="@drawable/custom_btn"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
</RelativeLayout>