<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:padding="30dp">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:background="@color/white"
    android:layout_centerInParent="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keep_caution"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/veri_code"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_confirm_type"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F6F6F6">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/have_you_just_found_a_pothole"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:textAppearance="@style/normal_word"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/confirm_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_2"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/underline"/>
                <Spinner
                    android:id="@+id/type_spin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:entries="@array/pothole_confirm"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
               android:padding="10dp">
                <Button
                    android:id="@+id/confirm_no"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:textAppearance="@style/underline"
                    android:textColor="#FF0000"
                    android:background="@drawable/custom_btn"
                    android:backgroundTint="@color/white"
                    android:layout_marginEnd="10dp"
                    />
                <Button
                    android:id="@+id/confirm_yes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textAppearance="@style/underline"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_btn"
                    android:layout_marginStart="10dp"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
</RelativeLayout>