<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="20dp"
        >
        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#1A03A9F4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/pothole_information"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="18sp"/>
                <ImageButton
                    android:id="@+id/close_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_close_24"
                    android:scaleType="centerCrop"
                    android:padding="5dp"
                    android:background="@android:color/transparent"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/author"
                    android:gravity="center_vertical"
                    />
                <androidx.cardview.widget.CardView
                    android:id="@+id/image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.33"
                    app:cardCornerRadius="15dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:scaleType="fitXY"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:text="Anh Nguyen"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/location"/>
                <TextView
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="19"
                    android:text="Marie Currie, TD, HCM"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/type_3"
                    android:layout_gravity="center_vertical"/>
                <ImageView
                    android:id="@+id/image_type"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/type"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:text="Danger"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>